Reinitialize the printer after changing the custom paper size

Task-number: QTBUG-34276
Change-Id: Ie382c39cb7b7b8307fcd1130702ca97e80e4a4f5
Reviewed-by: John Layt <jlayt@kde.org>

cregit: d9fd2085f9c2105187732a2c14fa78c414678d8b https://github.com/qt/qtbase/commit/d9fd2085f9c2105187732a2c14fa78c414678d8b